Bug 430798 - palapeli commit 4404144fa can't find goldberg slicer, segfaults at startup
Summary: palapeli commit 4404144fa can't find goldberg slicer, segfaults at startup
Status: RESOLVED FIXED
Alias: None
Product: palapeli
Classification: Applications
Component: slicers (other bugs)
Version First Reported In: unspecified
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Stefan Majewsky
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-25 05:09 UTC by Duncan
Modified: 2021-01-23 18:37 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Duncan 2020-12-25 05:09:02 UTC
Live-git frameworks/plasma/release-service/palapeli via gentoo/kde's overlay packages.  Qt 5.15.2, cmake 3.19.2.  Probably doesn't matter for this bug but I'm on kwin_wayland by default now.

Current head commit 4404144fa "Port slicer plugin loading to KPluginLoader" is broken.  It builds, but palapeli segfaults on startup with this message to konsole if I've started it from there:

Could not find slicer "palapeli_goldbergslicer".

As expected given the git log, head-1, f7375190e, builds and runs fine.

Should there be one or more slicer *.json files replacing the old slicer *.desktop files?  I don't see any in the package's file-list.

Searching the build output I see:

[17/87] cd /tmp/portage/kde-apps/palapeli-9999/work/palapeli-9999/slicers && /usr/bin/desktoptojson -i palapeli_goldbergslicer.desktop -o /tmp/portage/kde-apps/palapeli-9999/work/palapeli-9999_build/slicers/palapeli_goldbergslicer.json
Warning: Unable to find service type for service "Libpala/SlicerPlugin" listed in "/tmp/portage/kde-apps/palapeli-9999/work/palapeli-9999/slicers/palapeli_goldbergslicer.desktop" (:0, )
Generated  "/tmp/portage/kde-apps/palapeli-9999/work/palapeli-9999_build/slicers/palapeli_goldbergslicer.json"

...and similar for jigsaw and rect.  Could that warning have something to do with it?

There's no *.json files in the install phase (either the build-system's install to temp-location or the later gentoo-pkg level qmerge from there to the live system).  Of course the kservices5 slicer *.desktop files along with kservicetypes5/libpala-slicerplugin.desktop are gone and the qt5/plugins/*slicer.so files are moved into the palapelislicers subdir.
Comment 1 Albert Astals Cid 2020-12-25 10:25:23 UTC
I works here (i have deleted my distro palapeli just in case)

Nico, any idea what may be the problem?
Comment 2 Bug Janitor Service 2020-12-27 15:07:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/games/palapeli/-/merge_requests/5
Comment 3 Duncan 2020-12-27 21:56:06 UTC
(In reply to Bug Janitor Service from comment #2)
> https://invent.kde.org/games/palapeli/-/merge_requests/5

That definitely fixes the segfault at startup, allowing palapeli to find the slicers, startup and play, both builtin and user-created puzzles, so it's verified to fix this bug.


But then, as aacid mentions there, palapeli segfaults on the "finish" step when creating a new puzzle, with the below output to konsole if started from there:

Could not find slicer "/lib64/qt5/plugins/palapelislicers/palapeli_jigsawslicer.so".


So there's an apparently similar "can't find slicer" bug creating a new puzzle.

(I suppose I should create an invent/gitlab account so I can comment on such things directly on invent... assuming I can, I've not tried...)
Comment 4 Friedrich W. H. Kossebau 2021-01-23 18:37:01 UTC
Git commit 31a3b2b2ae7daf23d17aa51e4f66c148e15b84ad by Friedrich W. H. Kossebau, on behalf of Nicolas Fella.
Committed on 23/01/2021 at 18:35.
Pushed by kossebau into branch 'master'.

Fix finding plugin

cc.slicer is the id, not the full path

M  +2    -2    src/creator/slicerselector.cpp
M  +1    -1    src/file-io/components-creationcontext.cpp

https://invent.kde.org/games/palapeli/commit/31a3b2b2ae7daf23d17aa51e4f66c148e15b84ad