Fix finding plugin

cc.slicer is the id, not the full path

BUG: 430798